@@ -1,3 +1,6 @@
+2010-09-21 Harri Pitkänen <hatapitk@iki.fi>
+	* GC: Accept bracketed reference at the end of sentence.
+
 2010-09-13 Harri Pitkänen <hatapitk@iki.fi>
 	* Handle cases where an optional symbol is not found from Malaga symbol
 	  table. This can happen when older v2 morphologies are used.
